--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "0.0.1",
   "private": true,
   "license": "MIT",
-  "authors": ["An00bRektn", "Matt Espinos", "James Barkauskas"],
+  "authors": [
+    "An00bRektn",
+    "Matt Espinos",
+    "James Barkauskas"
+  ],
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.1"
   },
   "main": "index.js",
